fix users#show with long username on mobile

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,21 +5,25 @@
   float: right;
 }
 
-$EMBIGGEN: 200%;
-
-.user_name {
-  font-size: $EMBIGGEN;
-  font-weight: bold;
-  margin-left: 2px;
+.user_name_and_avatar {
+  .username {
+    font-size: 200%;
+    font-weight: bold;
+    margin-left: 2px;
+  }
+  white-space: nowrap;
+  overflow: hidden;
   .user_icon_container {
     img {
       float: left;
     }
   }
+  .avatar_explanation {
+    margin-top: -12px;
+    margin-left: 6px;
+    color: $COLOR_TEXT_GREY;
+    font-size: 90%;
+    white-space: normal;
+  }
 }
 
-.avatar_explanation {
-  margin-top: -12px;
-  margin-left: 6px;
-  color: $COLOR_TEXT_GREY;
-}
